Fixes alignment of pencil icon in Users Table
When cell is empty (e.g. in the email column), the edit pencil icon gets
shifted down and not centered. This patch makes the pencil icon centered
for all the cases.

Closes-bug: #1419204

--- a/openstack_dashboard/static/dashboard/scss/components/_inline_edit.scss
+++ b/openstack_dashboard/static/dashboard/scss/components/_inline_edit.scss
@@ -57,8 +57,9 @@ td.has-form {
 div.table_cell_wrapper {
    position: relative;
 
-  .table_cell_data_wrapper{
+  .table_cell_data_wrapper {
     padding-right: 35px;
+    min-height: 15px;
   }
 
   .inline-edit-label {
